Configure settings for Author Growth profile

--- a/.sfdx/sfdx-config.json
+++ b/.sfdx/sfdx-config.json
@@ -1,4 +1,4 @@
 {
-    "defaultdevhubusername": "myhuborg",
-    "defaultusername": "mbscratchorg"
+    "defaultdevhubusername": "prod",
+    "defaultusername": "cb-scratch2"
 }
